# dragon-kit

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SUPPORT.md  pyproject.toml  spec-driven.md
.github/workflows/scripts/: create-github-release.sh  create-release-packages.sh
docs/: README.md  docfx.json  index.md  installation.md  local-development.md  quickstart.md  upgrade.md
scripts/bash/: common.sh  create-new-feature.sh  update-agent-context.sh
scripts/powershell/: common.ps1  create-new-feature.ps1  update-agent-context.ps1
src/dragon_cli/: __init__.py
src/dragon_cli/assets/docs/: AGENTS.md
templates/commands/: analyze.md  checklist.md  clarify.md  constitution.md  implement.md  plan.md  specify.md  tasks.md  taskstoissues.md
tests/: test_agent_config.py  test_document_overrides.py
