[project]
name = "dragon-cli"
version = "1.0.0"
description = "Dragon CLI，面向次世代 Spec-Driven Development（SDD）的脚手架工具。"
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.scripts]
dragon = "dragon_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dragon_cli"]

